--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
 	"name": "create-electron-react-app",
 	"description": "Use React with Electron easily.",
 	"author": "Levminer",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"license": "MIT",
 	"scripts": {
-		"start": "electron .",
 		"dev": "npm run pack && npm run start",
-		"watch": "webpack --config .webpackrc.js --watch",
+		"watch": "concurrently 'npm:watcher' 'npm:electronmon'",
+		"watcher": "webpack --config .webpackrc.js --watch",
 		"pack": "webpack --config .webpackrc.js",
+		"start": "electron .",
+		"electronmon": "electronmon .",
 		"build": "electron-builder"
 	},
 	"build": {
@@ -20,6 +22,12 @@
 			]
 		}
 	},
+	"electronmon": {
+		"patterns": [
+			"!renderer/*",
+			"!dist/*"
+		]
+	},
 	"main": "./main/main.js",
 	"dependencies": {},
 	"devDependencies": {
@@ -27,10 +35,11 @@
 		"@babel/preset-env": "^7.12.13",
 		"@babel/preset-react": "^7.12.13",
 		"babel-loader": "^8.2.2",
+		"concurrently": "^5.3.0",
 		"css-loader": "^4.3.0",
-		"electron": "^11.2.2",
+		"electron": "^11.2.3",
 		"electron-builder": "^22.9.1",
-		"electron-reload": "^1.5.0",
+		"electronmon": "^1.1.2",
 		"eslint": "^7.19.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^7.2.0",
@@ -49,7 +58,7 @@
 		"sass": "^1.32.6",
 		"sass-loader": "^10.1.1",
 		"style-loader": "^1.3.0",
-		"webpack": "^4.46.0",
-		"webpack-cli": "^3.3.12"
+		"webpack": "^5.21.1",
+		"webpack-cli": "^4.5.0"
 	}
 }
